# os2mo-amqp-trigger-organisation-gatekeeper

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  docker-compose.yaml  init.config.yaml  pyproject.toml
.gitlab/: dependabot.yml
.reuse/: dep5
fastramqpi/: context.py  healthcheck.py  main.py
json/: edit.json
orggatekeeper/: calculate.py  config.py  debug_edit_ou.py  debug_script.py  depends.py  get_ou.py  main.py  manual_edit.py  mo.py  mo_uuid.py  model_client_edit.py  ra_uuid.py  utils.py
tests/: __init__.py  conftest.py  test_calculate.py  test_main.py  test_mo.py  test_settings.py
