# SPDX-FileCopyrightText: 2019-2020 Magenta ApS
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "orggatekeeper"
version = "2.7.0"
description = "OS2mo AMQP Trigger receiver that updates line management information"
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-triggers/os2mo-amqp-trigger-organisation-gatekeeper"
keywords = ["os2mo", "amqp"]

[tool.poetry.dependencies]
python = "^3.10"
gql = "^3.2.0"
prometheus-fastapi-instrumentator = "^6.1.0"
ra-utils = "^1.13.3"
raclients = "^3.1.12"
ramqp = "^9.1.0"
sentry-sdk = "^1.33.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-split = "^0.8.0"
asgi-lifespan = "^2.1.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = "True"
warn_unused_configs = "True"
check_untyped_defs = "True"
disallow_untyped_defs = "True"
plugins = "pydantic.mypy"

[tool.flake8]
max-line-length = 88
exclude = [
".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".venv", ".gitlab"
]
